# ENSAM_SAR_CO2

./: .gitignore  CLAUDE.md  Makefile  README.md  configurable_main.py  configurable_main.spec  init-without-make.sh  main.py  notebook_test.ipynb  package-lock.json  package.json  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: settings.local.json
GUI/: PGAnime.py  __init__.py
KPIS/: KpisGraphsGenerator.py  LiveKpisGraphsGenerator.py  __init__.py  kpis.py  utils.py
docs/source/: architecture.rst  conf.py  eco2_normandy.rst  index.rst  quickstart.rst  usage.rst
eco2_normandy/: __init__.py  factory.py  logger.py  port.py  ship.py  simulation.py  stateSaver.py  storage.py  tools.py  weather.py
optimizer/: boundaries.py  boundaries.yaml  boundaries_range.yaml  callback.py  compare_scenarios.py  cp_model.py  ga_model.py  history_analyzer.py  optimizer.py  orchestrator.py  utils.py
optimizer/CPModel/: __init__.py  callback.py  cp_model.py  utils.py
optimizer/GAModel/: __init__.py  ga_model.py  history_analyzer.py  problem.py  utils.py
scenarios/al/: phase3_rotterdam_18k_2boats - 3tanks.yaml  phase3_rotterdam_18k_2boats - 4tanks.yaml  phase3_rotterdam_18k_2boats - 5tanks.yaml
scenarios/dev/: phase3_bergen_18k_2boats.yaml  phase3_rotterdam_18k_2boats_3tanks.yaml
scenarios/phase_1a/bergen/: phase1a_bergen_12k.yaml  phase1a_bergen_18k.yaml
scenarios/phase_1b/: phase1b_bergen_18k.yaml  phase1b_rotterdam_18k.yaml
scenarios/phase_2/: phase2_bergen_18k_1boat.yaml  phase2_bergen_18k_2boats.yaml  phase2_rotterdam_18k.yaml
(+6 files in other folders)
